--- a/environment.yml
+++ b/environment.yml
@@ -7,24 +7,14 @@ dependencies:
   - python=3.8  # or your preferred Python version
   - pytorch=1.9.0
   - cudatoolkit=11.1
-  - cudnn=8.0
-  - ffmpeg
-  - libsm
-  - libxext
-  - libglib
-  - libxrender
-  - ninja
-  - git
-  - cmake
-  - jupyter
-  - pip
-  - pip:
-      - albumentations
-      - natsort
-      - yapf==0.40.1
-      - fairscale
-      - ensemble-boxes
-      - openmim
-      - mmengine>=0.6.0
-      - mmcv>=2.0.0rc4,<2.1.0
-      - mmdet>=3.0.0,<4.0.0
+  - cudnn=8.1.0  # A version compatible with cudatoolkit 11.1
+  # - pip:
+  #     - albumentations
+  #     - natsort
+  #     - yapf==0.40.1
+  #     - fairscale
+  #     - ensemble-boxes
+  #     - openmim
+  #     - mmengine>=0.6.0
+  #     - mmcv>=2.0.0rc4,<2.1.0
+  #     - mmdet>=3.0.0,<4.0.0
